Creacion index.html render JavaScript

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1 class="title">Esto es una prueba para Git Hub</h1>
+    <div id="renderQ1"></div>
+    <script src="main.js"></script>
   </body>
 </html>
