Change script tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1 class="title">Esto es una prueba para Git Hub</h1>
     <div id="renderQ1"></div>
-    <script src="main.js"></script>
+    <script src="q1.js"></script>
   </body>
 </html>
